# ValEngine

./: .gitignore  CMakeLists.txt  README.md  ShaderConfiguration.h  ValEngine.sln  ValEngine.vcxproj  ValEngine.vcxproj.filters  qt.props
GeneratedFiles/: qrc_enginetest.cpp  ui_enginetest.h
include/core/: Light.h  Scene.h  camera.h  engine.h  glassert.h  mesh.h  model.h  shader.h  texture.h
include/gui/: GLWidget.h  MainWindow.h
libraries/lib/: OpenMeshCore.lib  OpenMeshCored.lib  OpenMeshTools.lib  OpenMeshToolsd.lib  SOIL.lib  assimp-vc140-mt.exp  assimp-vc140-mt.lib  glew32.exp  glew32.lib  glew32s.lib
shaders/: base.frag  base.vert  baseStruct.frag  fill.frag  fill.vert  lamp.frag  lamp.vert  lighting.frag  lighting.vert  lighting_maps.frag  lighting_maps.vert  phong.frag  proto.frag
src/core/: IBOFactory.h  Light.h  Material.h  MeshShader.cpp  MeshShader.h  ModelLoader.cpp  ModelLoader.h  PhongShader.cpp  PhongShader.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  ShaderComponent.h  ShaderConfiguration.h  ShaderProgramGL.cpp  ShaderProgramGL.h  Types.h  VBOFactory.cpp  VBOFactory.h  camera.cpp  camera.h  cube.h  engine.cpp  engine.h  mesh.cpp  mesh.h  model.cpp  model.h  openGL.h  shader.cpp  shader.h  texture.cpp  texture.h
src/glw/: Buffer.cpp  Buffer.h  Buffer.inl  GLObject.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Types.h  VertexArray.cpp  VertexArray.h
src/gui/: GLWidget.cpp  GLWidget.h  MainWindow.cpp  enginetest.qrc  enginetest.ui
src/utils/: AABBMesh.h  Arrow.h  File.h  (+6 more)
(+1 files in other folders)
